# fastapi-template

./: .cursorrules  .env  .gitignore  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  start.sh
app/: crud.py  main.py
app/api/: __init__.py  ai.py  login.py  user.py
app/core/: config.py  db.py  dbsync.py  exceptions.py
app/migrations/: env.py
app/migrations/versions/: 0edb9232c9f7_24271600_第一次.py  57e28e9449f7_2024_12_06_初始化调整.py  d2cf607ba9e2_2024_12_06_初始化调整.py
app/models/: response.py  tables.py
app/models/base/: Response.py
app/models/schemas/: product.py  token.py  user.py
app/models/table/: __init__.py  login.py  user.py
app/tools/: index.py  random.py
prompts/: 01.获取验证码.md
